# arfid_reader

./: CMakeLists.txt  README.md
main/: halwrapper.c  halwrapper.h  main.c  spi.c  spi.h
